--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         </nav>
     </header>
 
+
+    <!--! Main  -->
     <main>
         <!--? Salad background image -->
         <div class="bg-img">
@@ -92,7 +94,7 @@
                 <div class="row tab-section">
                     <div class="col-4">
                         <div class="list-group" id="list-tab" role="tablist">
-                            <a class="p-1 list-group-item list-group-item-action active fs-3 fw-bold d-flex flex-column align-items-center gap-1"
+                            <a class="p-1 list-group-item list-group-item-action active fs-3 d-flex flex-column align-items-center gap-1"
                                 id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab"
                                 aria-controls="list-home">
                                 <div>
@@ -100,7 +102,7 @@
                                 </div>
                                 <p>Breakfast</p>
                             </a>
-                            <a class="list-group-item list-group-item-action fs-3 fw-bold d-flex flex-column align-items-center gap-1 p-1 "
+                            <a class="list-group-item list-group-item-action fs-3 d-flex flex-column align-items-center gap-1 p-1 "
                                 id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab"
                                 aria-controls="list-profile">
                                 <div>
@@ -108,7 +110,7 @@
                                 </div>
                                 <p>Lunch</p>
                             </a>
-                            <a class="list-group-item list-group-item-action fs-3 fw-bold d-flex flex-column align-items-center gap-1 p-1"
+                            <a class="list-group-item list-group-item-action fs-3 d-flex flex-column align-items-center gap-1 p-1"
                                 id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab"
                                 aria-controls="list-messages">
                                 <div>
@@ -116,7 +118,7 @@
                                 </div>
                                 <p>Snack</p>
                             </a>
-                            <a class="list-group-item list-group-item-action fs-3 fw-bold d-flex flex-column align-items-center gap-1 p-1"
+                            <a class="list-group-item list-group-item-action fs-3 d-flex flex-column align-items-center gap-1 p-1"
                                 id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab"
                                 aria-controls="list-settings">
                                 <div>
@@ -131,7 +133,7 @@
                             <div class="tab-pane fade show active" id="list-home" role="tabpanel"
                                 aria-labelledby="list-home-list">
                                 <!--~ Breakfast thingy -->
-                                <div class="row">
+                                <div class="row d-flex gap-3">
                                     <div class="col d-flex align-items-center gap-1">
                                         <img src="./public/img/menu_image_1.jpg"
                                             class="border border-3 border-secondary rounded-circle" height="100px"
@@ -161,7 +163,7 @@
                                     </div>
                                 </div>
                                 <br>
-                                <div class="row">
+                                <div class="row d-flex gap-3">
                                     <div class="col d-flex align-items-center gap-1">
                                         <img src="./public/img/menu_image_1.jpg"
                                             class="border border-3 border-secondary rounded-circle" height="100px"
@@ -257,7 +259,7 @@
                             <div class="tab-pane fade" id="list-profile" role="tabpanel"
                                 aria-labelledby="list-profile-list">
                                 <!--~ Lunch thingy  -->
-                                <div class="row">
+                                <div class="row d-flex gap-3">
                                     <div class="col d-flex align-items-center gap-1">
                                         <img src="./public/img/menu_image_2.jpg"
                                             class="border border-3 border-secondary rounded-circle" height="100px"
@@ -287,7 +289,7 @@
                                     </div>
                                 </div>
                                 <br>
-                                <div class="row">
+                                <div class="row d-flex gap-3">
                                     <div class="col d-flex align-items-center gap-1">
                                         <img src="./public/img/menu_image_2.jpg"
                                             class="border border-3 border-secondary rounded-circle" height="100px"
@@ -381,7 +383,7 @@
                             <div class="tab-pane fade" id="list-messages" role="tabpanel"
                                 aria-labelledby="list-messages-list">
                                 <!--~ Snack thingy -->
-                                <div class="row">
+                                <div class="row d-flex gap-3">
                                     <div class="col d-flex align-items-center gap-1">
                                         <img src="./public/img/menu_image_3.jpg"
                                             class="border border-3 border-secondary rounded-circle" height="100px"
@@ -411,7 +413,7 @@
                                     </div>
                                 </div>
                                 <br>
-                                <div class="row">
+                                <div class="row d-flex gap-3">
                                     <div class="col d-flex align-items-center gap-1">
                                         <img src="./public/img/menu_image_3.jpg"
                                             class="border border-3 border-secondary rounded-circle" height="100px"
@@ -507,7 +509,7 @@
                             <div class="tab-pane fade" id="list-settings" role="tabpanel"
                                 aria-labelledby="list-settings-list">
                                 <!--~ Dinner thingy -->
-                                <div class="row">
+                                <div class="row d-flex gap-3">
                                     <div class="col d-flex align-items-center gap-1">
                                         <img src="./public/img/menu_image_4.jpg"
                                             class="border border-3 border-secondary rounded-circle" height="100px"
@@ -537,7 +539,7 @@
                                     </div>
                                 </div>
                                 <br>
-                                <div class="row">
+                                <div class="row d-flex gap-3">
                                     <div class="col d-flex align-items-center gap-1">
                                         <img src="./public/img/menu_image_4.jpg"
                                             class="border border-3 border-secondary rounded-circle" height="100px"
