--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <!--? Nav Bar  -->
         <nav
-            class="d-flex px-5 gap-1 p-1 flex-column flex-lg-row justify-content-evenly align-items-center text-center">
+            class="d-flex px-5 gap-1 p-1 flex-column flex-md-row justify-content-evenly align-items-center text-center">
             <!-- left Navlinks -->
             <ul>
                 <li><a href="">HOME</a></li>
@@ -884,7 +884,7 @@
                 aperiam obcaecati excepturi
                 <br> repellendus delectus!
             </p>
-            <div class="fs-3 d-flex gap-1 justify-content-center">
+            <div class="fs-3 d-flex gap-1 justify-content-center justify-content-lg-start">
                 <a href="https://www.facebook.com/" target="_blank" class="text-white">
                     <i class="fa-brands fa-facebook-f"></i>
                 </a>
