--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                     <span class="text-chef-red big-text">TASTE</span> makes it one <br>
                     to remember!
                 </h1>
-                <div class="banner-btn mt-2">
-                    <button class="btn btn-light">
+                <div class="banner-btn mt-2 mb-2 d-flex flex-column flex-md-row align-items-center justify-content-center">
+                    <button class="btn btn-light rounded-pill">
                         Purchase Theme
                     </button>
-                    <button class="btn btn-chef-red">
+                    <button class="learn btn btn-chef-red rounded-pill">
                         Learn More
                     </button>
                 </div>
@@ -861,7 +861,7 @@
 
                 <!-- Blog button -->
                 <div class="d-flex w-100 justify-content-center mt-2">
-                    <button class="btn btn-chef-red px-1 rounded-pill">Know More</button>
+                    <button class="btn btn-chef-red px-2 py-1 rounded-pill">Know More</button>
                 </div>
                 <!-- Bottom Corners -->
                 <div class="d-none d-md-flex justify-content-between align-items-center mt-2">
@@ -964,12 +964,12 @@
                     <i class="fa-brands fa-linkedin-in"></i>
                 </a>
             </div>
-
         </div>
+
         <div class="col mt-1">
             <!-- Instagram -->
             <h3>INSTAGRAM</h3>
-            <div class="d-flex justify-content-center align-items-center d-md-block gap-test">
+            <div class="d-flex container-fluid justify-content-center align-items-center d-md-block gap-test">
                 <!-- four icons -->
                 <div class="d-flex flex-column flex-md-row gap-1">
                     <img src="./public/img/instragram_gallery_img1.jpg" alt="">
@@ -986,8 +986,8 @@
                     <img src="./public/img/instragram_gallery_img1.jpg" alt="">
                 </div>
             </div>
-
         </div>
+
         <div class="col d-md-flex flex-md-column align-items-md-center d-lg-block mt-1 ">
             <!-- Tags -->
             <h3>Popular tags</h3>
@@ -1006,6 +1006,7 @@
                 <button class="btn btn-chef-red border border-1 border-light rounded-pill">Food</button>
             </div>
         </div>
+        
     </footer>
     <div class="last container-fluid"></div>
 
